tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_normal_generic_used_in_nested_array_length_fail/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Type provided when a numeric generic was expected
  ┌─ src/main.nr:4:16
  │
4 │         b: Bar<N>,
  │                - the numeric generic is not of type `u32`
  │

Aborting due to 1 previous error
